# mockterm

./: .gitignore  AGENTS.md  README.md  pyproject.toml
.github/workflows/: ci.yml
openshell/: Containerfile  github-mockterm.yaml  policy.yaml
scripts/: README.md  box-test.py  eye-chart.py
src/mockterm/: ansi.py  cli.py  render.py  session.py
tests/: test_ansi.py  test_cli.py  test_render.py
